--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -261,12 +261,12 @@ th {
      -moz-box-sizing: border-box;
           box-sizing: border-box;
 }
-*:before,
+/**:before,
 *:after {
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
           box-sizing: border-box;
-}
+}*/
 html {
   font-size: 62.5%;
 
