--- a/src/style.sass
+++ b/src/style.sass
@@ -15,13 +15,30 @@ body
   // background-color: #dbd
   position: fixed
   overflow: auto
-  width: 230px
+  width: 200px
   a
-    font-size: 14px
+    font-size: 16px
+    color: #000
+
+  ul
+    list-style: none
+    background-color: #faf
+    margin: 0px
+    padding: 0px
+
+  li
+    margin-top: 2px
+    margin-left: 5px
+    padding: 3px 15px
+    background-color: #999
+
+    ul
+      display: none
 
 #right_col
   // background-color: #bdd
   margin-left: 260px
   width: auto
+
 
 
